@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsV1tzq7rZvv9+Rq6/6QYR0tKZdWHI5mSHLONEErqzJAewJczE2Bg6/e8dCRsfstbu3u30ptOLjB2Q3uPzvs/jvz3s6hX75aMUK7paNn/qpHj46wOVfkPetnkqxY6gWGR4Ps2AuXktXblER5FJWPBJXTDJ+9fSpVFp+lHZ5lGVCB7CdibFji5sQaVf0gBuviNS0DAR+sz92SoVFLu7DKdiJuE+Q/GOoLlDpL9j4L2ceZNy9j58UuTvM8QFRXDPPbuhIBXfcd6wwF8vO1PSAAruRbvIi5p0oT7jJkN2QQBsCLKNa/s8jE2yiLknkwOVpCYW7PS7t21OrLjN2rrj6ChYv53OFm5NZS0yK/1YIntDcP7klZM88lxjhV3xWro7Cnjv5dsmCsR+KeGa+07Pw1hkyPxgYXzIAOwZcLrXfJtH3iSnwP7IgLMn8lhn1vxJ3WMAdtx3ClKlgp3O8VC0KiYaOBVrdSxiFaZdhhIDg2PNVExY1fDlHFOb4XT7WrqbDKcFA47JZCJYO9jTZ9+2+RLZLcdpf86D9pdnzEo7gvzm5K/J8OTedk0r1+Rhcs7xbGesmfIVeUaeAaddQaegwfGDB84HDUTPn8/vL76vfObju8DZY6D7s1uixHgt3T0FTjv4Gv4ILtYEu4bGYZUYTMKC4heNlyWa60+C7CKTR0E0NuKWSWdNcNJTK+4jYdzHalDT2S1xYpx7NcQiDIKMpyh0OwoSwazkwKqXfzWPmlaJYFX6kUkoqRULL/9Dvf1Z/WsewOa1dO+f3/R3wKlZsHMfQrfgQT5gMITGOXZWwR0ZfU+aSMdm9zTwDfJ208NzXHoervtDkd+yAHY3tVTPFZ77AdfX5yPPFVyq+Xb0rhlmi02v70YBBHqercQggdjrfIO0pnc+CCaCVvMDD5JWxZZZk5/YgRv2vM05Stu7WJTvAwmc9RLATs0UBcknwdGdneOBdE5HUFoz0+lp4Fgqr9fSHZ61X3OfWYnNwPFANGZEr+swYEDlbRAcf3Dp7ziC/bl2DMAdQYlBrehLr5YA2rf1d0GGjuZN/1Scp/OzxW3NZgvXJOFknAVVs8u99JCBZtxJs8VtXsrWCidXfTJy1r+M36mEBpHHA7+c3/IwbZdVcrjyf3jpMzPDcLPE88tM4tpkEg6YCAozu5xf08AxSUAOHNkbVm3GOwQ4BwKOgoWwZBYsL3k0BZFNMeCf1DRMBRPOXZ3cniiOs9IDW3/Zk58Eb56iYOSR0/wofoM3e0/zy1z3c00t1z73kFTx4Wf7l1zxrVca+n9+NTuX/scjJk54OXHypZYcpy2/qqPCB1M5yfcpB4Wg622+CPx+MeyXbYwbeuV/f44PY6OOvExGvxYFM+yCItgrviWLvKIWNBQG467NYwB3GU6MJUp6gvwuA3k18yYVk6qfL9VMx8Y/M0Q+swXbRR7XnMkDv196rPbyb98e/n+QI3LVfJbsB4LkDUGDSbE+CZA1RYo4TcHDuM7ASajgWC8W1I0ioCc4NZln1zQw9iMZPJsyQ8eeLG4Ew/msQZDZ6kX3z4SMNAsq/YogUy2bPUXOhryZjzPsFhnYNUT5wvPfEjIX+zjtOHov8bxeU2DLJeIm0+/en6KAdyx4mbLA6bnvKAIxMnTcDUAwcoocQOBpaY6L8LyYlU9no8m5szd6+VipoAvbpqgtx6UXpkrUCf68VXkdSKgJYE88Rw24IsD9Cpm7mUxrBoaYo/wPCaWG4LRTIPmPiqUTTv4nmP6rBVMTBfCRh3Gh8Kbr5DtaAI31vBc21pjv9DbGu+dherj07OVmGWPrtOxNx1ridIutWBAAH0cxFTRi9bYdsDg/LW75/hT5j/tp54z4jye/Ser/rhAYd8pPxUCod43OTYm00XbgG8vnL3j/glNVd1ol+ocbtnjNg+KDSVgRXLQ3ODj3IExtFrxf979Ts4rL/Jf356PeD9/Lx8/p4muNBjvKR/4Ueem1yGyiMBYnfri2LZl0mh8JUh78RXHGsNvmI2E2GWoEBn7HpG//EMdnnrESwW/i0lgZYyZjzU6xDXtZC4frOE59urp3IWsmYUMtIjDQWLrO68cC5HfdSQtFtuQkLvTsns8FpKPA+IKlU61u+FXdZfqHtCnuRQ295mfFt6f5ua4TBalJA9jfiLD1eV4TQQO45oHTXWPtxu7vFDlexbcEPT4NwkX10OynHvwzAjf57EdeNE1nupjIuHSjDCevKj9mKQ5/38bAMXnomtzTwkXQwO95INYMwILJZBt3rYrhIna8SbUEvlyCX/V3/WPHUtySV9P59tvD3//vHwEAAP//eU7rOQ==")
+	unpacked := packer.MustUnpack("eJzsWF9zs7j1vv99jNz+Oi2I15mlM3thyCLADnmNE0noDkkOYEuYDdgYOv3uHWHjf8m73W2nN51excZHOv+e85yH/O2hrlb8L++FXLFV2vy5U/Lhrw9MeQ193WaxkjXFoUzIYpYAc/NSOCrFB5kolItplXMl+pfCYUFhekHRZkEZSeGjdq5kzZYTyZRXMIg23zHNmR/JwebetowlI06dkFjOFdolOKwpXthUeTUHb8XcnRbzt+Nfhr1dgoVkGO2EO2kYiOV3kjUceuu0MxWDSAo3qAM3aOKl/hs2CZ7kFKCG4olxfb/wQ5Mub2xrBkSZ4kk5VwcpFKq/41gmJSoDacwSYO+okqUgYZ6og3wpnJKXztotQ5NB1L9k2yaAcpcqtBaeXTEVy9XTdha40yzw4wmHb48BPOyp9TxzCyNL8eRXiiODWJHBFcoZsluu7DUlUc+s4NEtplngOnsm7TUDE8WgXIunrT7XUxIaBHhKQNSd7IwVcXRMOofeHWJB34Qf5okVvzMoex2TgKjh/RiTkwuYPQYwzgX0emahLgGoP9032L4UTsVKxxT+85jH/vIs6oUfygSbJ39mzp/u75Y77iODjzmS8Z5zzTL9fb501sxyJgR4NfNsg5l2nZLIGH+/8n3xWUzPvzEweT/251Al1uIxgJM9s6az81nXkSsYSe4vHgOvLrgVdxR7De+Gvld0wEx4xusRn07HQCS5Fe15+VyQxV2sVrwn4FBxa/F4HUtKYsletxn3w72uJwd2x9t/NQ+54wB1wrMLiumeq7fZH+vtD+oPpUGx8Rj493257u8Rpwx77dgHDj0jPWKwFSQesdIJfJBn366R6dhYGQ0zfdvDU1zHebjuT5MQp6UkuKll4B7xfMQ1v7LXOSAwzDSgFRtn67rO7jSjhEpWLvbcijcp/jbkS6Hc3fnQs74Trm0k1lTHtubTr+8ROG5fCsek/vQulsOedvaGgehD5xDAeJ+ARvLs9h4G7XJuhZJC2RMrqpkldF6PgX989jl3vueW7PU5jZkViYY6HDFAK+bHkksbJPhgUvI8ckZPNUdb8Z6vP/Xqg5LNbf19zc3opn/a3ymW5q5mTeCjzVif+dLRNTufo9Bep2DkJG17k5e+a8LBpU/zpdM/Xz7vKIkVg7Z1toe5IXznVw7si3/4Ux+tUS5wXIlLHPmqRB3FR0ykPiou9rrOaEOVbTIVd6vLHJcM2CWDqBU47AUOznmkwFMp+GXAP1Wy1jxLrLs6+ZFkEK0FtLtPPAkbuXrdZhRPhl1BT3EK5dUC3/CewUskj/2M9tzfjD1UXNk/4t+rHbydzZfDd+MyO1f9L0dMTI94gaig2DMuz2xT+I55VccPSmSvc6KLykoh2r0UTpCQKBz4pcvkymwu/t3JuAvE+3KThUWSLaHXv2r9QKI2wZGcuWIvSNwKsijn7rSk+JBzK64SK5IJCdepy+vAFR3FccU7XuvYQtDkVDV52LVZqPFiRUZCom3YbWYPfzpKFrVqPgr+hWh5xcjgSq5PImXNsCZSUwo/rBJwEjMkLHm/zXB3Xv49JbHJdULQ2J0b92SqBB/6O6Ew2hoUmy2DnkH/mdhRZs6UV1JsaiLZMWxv6Kv5bU6cPAF1Q7UvsvgtsXO5n8SdwHfCCNolBXJHu0k9kNWTuaE4NGkXCldFe6ZoRfWC1+JHA9MK26StWmZFBgFyx604Z7AdwDJfOg2zqCQnYj2T0kjebqiF17DA52oxEJQGx7yUDXODMzEK6HUUIOOl0LnYm2FJdJPN3Iom3IolW04mDLc7TRAnUVb8MTF16ul/VlA1lMRdiqP/iar/ZlGliZ7kBleexttQJwK0SDL7H4mfc76nOM4x3j0X8KdLz9prwg7fx4VALFEJmL9zhUpK8rPgSgGavBRHLI5iS88vKb59zMEZ/5vfXPz/rliA55emHwqG4WVqMeTWJGQ63t0mJN5+xvsnnOq67zg45AKidwGkkXp2R7GQK396g4OxB8KXLV1c9z/Us7qaPdmL70d++P95UVefa3TiJu3jaZuFN0LUyPjwgmjeilZIOwaMr0SrwfptNnLbZamaeQrQe0LCLiGbL3HMTjuKA2TcxDVgZYxZvyA/X8d24uVBXFzHcerT1bnLQu8oNvdCofcBSzd5fS1SftcZ6OmFLE8CZJjd0Y6W4V7neIelU62ud/NwttP+GX67Fz4j7w6CZa7O83Ndpz31UU3J841QO88rQLXeB8wKr7F2c+/vE0LbmQC5ZOvtIG6WuofkeRuSht3kc/yHxIBtQowqcBMV/JLn3ND5oZ5Db02XWcksZOhcjuIG1QmJDL1fKPa6BGTlfIjhIogCV3wkmH4ky+Hz8EKkd0vq8srNfv754e//948AAAD//7sC+54=")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
