@@ -52,3 +52,4 @@
 - Follow home path for all config files {pull}18161[18161]
 - Do not require unnecessary configuration {pull}18003[18003]
 - Use nested objects so fleet can handle metadata correctly {pull}18234[18234]
+- Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
